--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gdnsd-1.11.2.tar.xz": e91631a9395226dde932857a9a90d291738ae0e7
+  gdnsd-2.2.0.tar.xz: 5546b68296d7bbca3c9ca9308589fd224ba3e2a1
